Fixed spacing

--- a/site/generalStyling.css
+++ b/site/generalStyling.css
@@ -69,7 +69,7 @@
   flex-grow: 1;
 }
 
-.region-container {
+.region-title {
   background-color: #99CCFF;
   color: #FFFFFF;
   width: 100%;
